Update CheckParentPackaging